Worked on graph
